Last Changes to the Login and Credentials Section

--- a/templates/football.html
+++ b/templates/football.html
@@ -3,4 +3,8 @@
 {%  block main %}
     <p>{{ message }}</p>
     <h1>This is the home page for all the REAL fans of football like {{ username }}.</h1>
+
+    <br>
+
+    <a href="/logout">Log Out?</a>
 {% endblock main %}
