--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,13 @@
 
     <br>
 
-    <a href="/signup">Sign Up Here.</a>
+    <a href="/signup">Sign Up Instead?</a>
 
-    <form action="/" method="POST">
+    <br>
+
+    <p>Log in with your credentials below.</p>
+
+    <form action="/login" method="POST">
         <input type="text" placeholder="Enter Username" name="username">
         <input type="password" placeholder="Enter Password" name="password">
         <input type="submit" value="Submit">
